# dekkal

./: .gitignore  DEKKAL_DataPipeline_ML_Documentation_v1.0.docx  README.md  dekkal.html  dekkal_soil_gee.csv  docker-compose.yml  main.py  new_arcth_design.md  ngrok.yml  notes  pyproject.toml  render.yaml  setup_pipeline.py
.claude/: settings.json
Our Commitment to Accountability/: 01_AI_Governance_Statement.md  02_AI_Inventory_List.csv  03_Risk_Escalation_Map.md  04_Data_Ethics_Checklist.md  05_Acceptable_Use_Policy.md  06_Code_of_Ethics.md  07_Algorithmic_Accountability_Guideline.md  08_Customer_Disclosure_Statement.md
backend/: .env.example  Dockerfile.hf  Dockerfile.workspace  README.md  batch_example.json  dekkal_xgboost_features.pkl  dekkal_xgboost_features_v3.pkl  dekkal_xgboost_v1.pkl  dekkal_xgboost_v3.pkl  dekkal_zone_lookup.json  examples_gemini.py  interviews_meeting  main.py  pyproject.toml  setup_check.sh  test_gemini_integration.py
backend/api/models/: schemas.py
backend/api/routers/: batch_llm.py  score.py
backend/api/services/: cache.py  drainage_distance.py  feature_engine.py  geocoder.py  llm_explainer.py  ml_model.py  report_generator.py  scoring_engine.py  zone_config.py
data-pipeline/: CRU_senegal_annuelts4.05.1901.2020.pre.csv  chirps_p99_dakar.py  dekkal_1_ee_api_colab_setup.ipynb  dekkal_chirps_p99_dakar.csv  dekkal_dataset_zones.csv  dekkal_dataset_zones.py  dekkal_features_srtm.py  dekkal_final_dataset_v1.csv  dekkal_pikine_clean_dataset.csv  dekkal_pikine_dataset.csv  dekkal_pikine_zones_dataset.csv  dekkal_soil_dakar.csv  dekkal_soilgrids_dakar.csv  dekkal_terrain_grid_200pts.csv  dekkal_terrain_summary.json  extract_pikine_communes.py  extract_pikine_zones.py  first_dekkal_datasets.py  flood_detection.py  flood_ground_truth_dakar_2015_2024.csv  model_v1.py  pikine_communes_bbox.csv  pyproject.toml  soil_gee.py  (+2 more)
(+57 files in other folders)
