[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "earthengine-api>=1.7.22",
    "fastapi>=0.136.1",
    "geopandas>=1.1.3",
    "geopy>=2.4.1",
    "numpy>=2.4.4",
    "osmnx>=2.1.0",
    "pandas>=3.0.2",
    "pydantic>=2.13.3",
    "scikit-learn>=1.8.0",
    "shapely>=2.1.2",
    "uvicorn>=0.46.0",
    "xgboost>=3.2.0",
]
