[project]
name = "backend"
version = "0.2.0"
description = "Dëkkal Flood Risk API with Gemini LLM Explanations"
requires-python = ">=3.13"
dependencies = [
    "earthengine-api>=1.7.22",
    "fastapi>=0.136.1",
    "geopandas>=1.1.3",
    "geopy>=2.4.1",
    "google-genai>=1.74.0",
    "google-generativeai>=0.3.0",
    "numpy>=2.4.4",
    "osmnx>=2.1.0",
    "pandas>=3.0.2",
    "pydantic>=2.13.3",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "redis>=7.4.0",
    "requests>=2.31.0",
    "scikit-learn>=1.8.0",
    "shapely>=2.1.2",
    "uvicorn>=0.46.0",
    "xgboost>=3.2.0",
]

[project.optional-dependencies]
openai = ["openai>=1.3.0"]
ollama = ["requests>=2.31.0"]
full = [
    "openai>=1.3.0",
    "requests>=2.31.0",
    "fastapi-limiter>=0.1.5",
]
